<resources>
    <string name="app_name">My Application</string>

    <string name="fb_app_id">406364016222124</string>
    <string name="gl_server_api_key">AIzaSyBS7zC9tJFmYzF8HmK-aQNMgV06mO09kLI</string>

    <string name="fb_login_txt">Sign in with Facebook</string>
    <string name="username">Username</string>
    <string name="userid">User Id</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Sign in</string>
    <string name="customize">Customize</string>
    <string name="sign_up">Sign up</string>
    <string name="forgot">Forgot Password?</string>
    <string name="acct_txt">Or sign in with Company\'s account</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="material_id">Material Id</string>
    <string name="user">User:</string>
    <string name="material">Material:</string>
    <string name="status">Status:</string>
    <string name="time">Time:</string>


    <!--Glance addition-->
    <string name="signUp">Dont have an account? Sign Up</string>
    <string name="authname">Authority Name</string>
    <string name="num_of_flats">Number of Units</string>
    <string name="phone">Phone number</string>


</resources>
