<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingEnd="40dp"
            android:paddingStart="40dp"
            android:paddingTop="30dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:theme="@style/TextInputLayoutStyleLogin"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/etUserId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/userid"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@drawable/generic_focus_variation_blackmat_grey"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-16dp"
                android:theme="@style/TextInputLayoutStyleLogin"
                app:errorEnabled="true">

                <EditText
                    android:id="@+id/etMaterialId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/material_id"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textColor="@drawable/generic_focus_variation_blackmat_grey"
                    android:textSize="16sp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:foreground="@color/colorBlackDimText" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingEnd="12dp"
            android:paddingStart="12dp"
            android:paddingTop="60dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/user"
                    android:textColor="@color/colorMaterialBlack"
                    android:textSize="16sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tvUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:paddingStart="30dp"
                    android:text="Value"
                    android:textColor="@color/colorMaterialBlack"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/material"
                    android:textColor="@color/colorMaterialBlack"
                    android:textSize="16sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tvMaterialName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="Value"
                    android:textColor="@color/colorMaterialBlack"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/status"
                    android:textColor="@color/colorMaterialBlack"
                    android:textSize="16sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tvStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:paddingStart="20dp"
                    android:text="Value"
                    android:textColor="@color/colorMaterialBlack"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:text="@string/time"
                    android:textColor="@color/colorMaterialBlack"
                    android:textSize="16sp"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tvTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:paddingStart="28dp"
                    android:text="Value"
                    android:textColor="@color/colorMaterialBlack"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="visible" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>