<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cordinatorlayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">


    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            app:collapsedTitleTextAppearance="@style/CollapsingTitleCollapsed"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginBottom="20dp"
            app:expandedTitleMarginEnd="20dp"
            app:expandedTitleMarginStart="25dp"
            app:expandedTitleTextAppearance="@style/CollapsingTitleExpanded"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:weightSum="2"
                app:layout_collapseMode="parallax">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.6"
                    android:gravity="center">

                    <co.djphy.glance.customviews.CircularImageView
                        android:id="@+id/userImage"
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        app:border="true"
                        app:border_color="@color/colorWhite"
                        app:border_width="1dp"
                        app:shadow="false" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:orientation="vertical"
                    android:paddingStart="6dp"
                    android:paddingEnd="6dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_layout_userName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:theme="@style/TextInputLayoutStyleProfile"
                        app:errorEnabled="true">

                        <android.widget.EditText
                            android:id="@+id/etUserName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/authname"
                            android:inputType="textPersonName"
                            android:maxLines="1"
                            android:textColor="@drawable/generic_focus_variation_white_grey"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_layout_phNum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-16dp"
                        android:theme="@style/TextInputLayoutStyleProfile"
                        app:errorEnabled="true">

                        <android.widget.EditText
                            android:id="@+id/etphNum"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/phone"
                            android:inputType="phone"
                            android:maxLines="1"
                            android:textColor="@drawable/generic_focus_variation_white_grey"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_layout_emailId"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-16dp"
                        android:theme="@style/TextInputLayoutStyleProfile"
                        app:errorEnabled="true">

                        <android.widget.EditText
                            android:id="@+id/etEmailId"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/email"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:textColor="@drawable/generic_focus_variation_white_grey"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/input_layout_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-16dp"
                        android:theme="@style/TextInputLayoutStyleProfile"
                        app:errorEnabled="true">

                        <android.widget.EditText
                            android:id="@+id/etPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/password"
                            android:inputType="textPassword"
                            android:maxLines="1"
                            android:textColor="@drawable/generic_focus_variation_white_grey"
                            android:textSize="14sp" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="8dp"
            android:layout_marginTop="0dp"
            android:indeterminate="true"
            android:theme="@style/ProgressBarTheme"
            android:visibility="gone" />
    </com.google.android.material.appbar.AppBarLayout>

    <!--<RelativeLayout
        android:id="@+id/rlMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">-->

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/llBottom"
        android:layout_marginBottom="50dp"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <FrameLayout
            android:id="@+id/flContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

        </FrameLayout>

        <!--<TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="one\ntwo\none\ntwo\n
            one\ntwo\none\ntwo\none\ntwo\none\ntwo\n
            one\ntwo\none\ntwo\none\ntwo\n
            one\ntwo\none\ntwo\n
            one\ntwo\none\ntwo\n
            one\ntwo\n
            one\ntwo\n
            one\ntwo\none\ntwo\n
            one\ntwo\n
            one\ntwo\none\ntwo\none\ntwo\n
            one\ntwo\none\ntwo\none\ntwo\n
            one\ntwo\none\ntwo\n
            one\ntwo\none\ntwo\n
            one\ntwo\n
            one\ntwo\n
            one\ntwo\n
            one\ntwo\n
            one\ntwo\n
            one\ntwo\n
            one\ntwo\none\ntwo\none\ntwo\none\ntwo\n
            one\ntwo\none\ntwo\n
            one\ntwo\n
            one\ntwo\none\ntwo\n
            one\ntwo\none\ntwo\none\ntwo\none\ntwo\n
            one\ntwo\none\ntwo\n
            one\ntwo\none\ntwo\none\ntwo\n
            one\ntwo\none\ntwo\none\ntwo\none\ntwo\n" />-->


    </androidx.core.widget.NestedScrollView>

    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <View
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:background="@drawable/shadow_up" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_blue_filling_press_variation"
            android:clickable="true"
            android:fontFamily="@font/montserrat"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="Update Profile"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:typeface="sans" />
    </LinearLayout>
    <!--</RelativeLayout>-->

</androidx.coordinatorlayout.widget.CoordinatorLayout>
